# ows-events-localisation

./: .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  init_db.sql  pyproject.toml  requirements.txt  start.py
root/: auth.py  category_controller.py  category_query.py  config.py  database.py  seo_optimisation_controller.py  server.py  session.py  translate_query.py
root/api/categories/: categories_model.py  category_controller.py  category_query.py  router.py  schemas.py
root/api/censorship/: main.py  router.py
root/api/censorship/tests/: event_validator_tests.py
root/api/censorship/types/: event_validator_errors.py  validator_types.py
root/api/location/: location_description_controller.py  router.py
root/api/qr/: router.py
root/api/text/: language_controller.py  router.py  schemas.py  seo_optimisation_controller.py  translate_model.py  translate_query.py
root/api/users/: auth.py  router.py  schemas.py  user_model.py
root/db/categories/: category_controller.py  category_query.py  router.py
root/db/location/: router.py
root/db/qr/: main_qr.py  router.py
root/db/text/: language_controller.py  router.py
root/models/: categories_model.py  translate_model.py
tests/: test_auth.py
